fixing layout bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,15 +14,17 @@
 body {
     font-family: JetBrains Mono, sans-serif;
     text-align: left;
-    /* position: relative; */
-    /* background-color: #3c3836; */
-    /* background-color: $secondary-color; */
     background-color: var(--gruv-dark);
-    margin-left: 0px;
-    margin-top: 0px;
-    display:block;
-    /* min-height: 100vh; */
+    /* margin-left: 0px; */
+    /* margin-top: 0px; */
+    margin:0px;
+    /* display:block; */
     padding-bottom: 50px;
+}
+body.project {
+    /* padding-bottom: 0px; */
+    padding: 0;
+    margin: 0;
 }
 
 .section {
@@ -106,7 +108,7 @@ a:hover {
     display:flex;
     flex-wrap: wrap;
     /* top:130px; */
-    left:10px;
+    /* left:10px; */
 }
 .iframe_container {
     position:relative;
@@ -122,7 +124,7 @@ iframe {
     border:0;
     display:inline-block;
     width:100%;
-    height:100%
+    height:100%;
 }
 .text_container {
     display:block;
@@ -155,18 +157,20 @@ iframe {
 .footer {
     background-color: var(--gruv-blue);
     color: var(--gruv-dark);
-    padding: 2px;
+    /* padding: 2px; */
     position: fixed;
     bottom: 0;
     width: 100%;
     /* display: flex; */
-    overflow:auto;
+    /* overflow:auto; */
 }
 
 .footer p {
     color: var(--gruv-dark);
-    margin-right: 5px;
-    margin-left: 5px;
+    /* margin-right: 5px; */
+    /* margin-left: 5px; */
+    padding-right:5px;
+    padding-left:5px;
 }
 
 
@@ -180,7 +184,7 @@ iframe {
 .right {
     display: flex;
     float: right;
-    margin-right: 5px;
+    /* margin-right: 5px; */
 }
 
 
